idf_component_register(SRCS "src/openipmc_esp32_example_main.c"
                            "src/esp32_ipmc_ios.c"
                            "openipmc/src/ipmb_0.c"
                            "openipmc/src/ipmb_0.h"
                            "openipmc/src/ipmc_ios.h"
                            "openipmc/src/ipmc_tasks.h"
                            "openipmc/src/front_leds.c"
                            "openipmc/src/front_leds.h"
                            "openipmc/src/fru_inventory_manager.c"
                            "openipmc/src/fru_inventory_manager.h"
                            "openipmc/src/fru_state_machine.c"
                            "openipmc/src/fru_state_machine.h"
                            "openipmc/src/handle_switch.c"
                            "openipmc/src/ipmi_msg_command_switch.c"
                            "openipmc/src/ipmi_msg_manager.c"
                            "openipmc/src/ipmi_msg_manager.h"
                            "openipmc/src/ipmi_netfn_app.c"
                            "openipmc/src/ipmi_netfn_picmg.c"
                            "openipmc/src/ipmi_netfn_sensor_event.c"
                            "openipmc/src/ipmi_netfn_storage.c"
                            "openipmc/src/power_manager.c"
                            "openipmc/src/power_manager.h"
                            "openipmc/src/sdr_definitions.h"
                            "openipmc/src/sdr_manager.c"
                            "openipmc/src/sdr_manager.h"
                            "openipmc/src/sensors_templates.c"
                            "openipmc/src/sensors_templates.h"
                            "openipmc/examples/ipmc_custom_initialization.c"
                            "openipmc/examples/ipmc_power.c"
                    INCLUDE_DIRS "."
                    )
